...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="@+id/first_card"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/send_txt_to_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:textSize="12sp"
...
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_qrcode_scan"
            android:backgroundTint="#333"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_wallet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_txt_to_address"
            android:contentDescription="@string/send_icon_qrcode_scan_content_description"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
...
            android:layout_marginBottom="20dp"
            android:text="@string/send_amount_in_smartcash_label"
            android:textAlignment="viewStart"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_send_txt_amount_converted" />

        <EditText
            android:id="@+id/fragment_send_txt_amount_converted"
            android:layout_width="0dp"
            android:inputType="numberDecimal"
            app:layout_constraintWidth_default="percent"
...
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pin_label">

            <EditText
                android:id="@+id/login_main_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/login_main_btn_eye"
                android:inputType="numberPassword"
                android:maxLength="4"
                app:layout_constraintEnd_toEndOf="parent"
                android:autofillHints=""
                app:layout_constraintStart_toStartOf="@id/login_main_btn_eye" />

...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pin_label2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/send_button_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
...
