...

    <!-- Enrique's strings -->

    <!-- main xml -->
    <string name="main_backup_label">Backup your wallet!</string>

    <string name="main_dialog_forgot_pin_title">Forgot your PIN?</string>
    <string name="main_dialog_forgot_pin_message">Are you sure you want to change your PIN?</string>

    <string name="main_dialog_backup_wallet_title">Backup your wallet</string>
    <string name="main_dialog_backup_wallet_message">Write down on paper the code:</string>

    <string name="main_dialog_logout_title">Logout?</string>
    <string name="main_dialog_logout_message">Are you sure you want to logout?</string>

    <string name="main_redirect_to_login_toast">Redirecting to login…</string>


    <string name="main_dialog_master_security_code_title">Your code is OK!</string>
    <string name="main_dialog_master_security_code_message">*We don\'t recommend to keep it on the device.</string>
    <string name="main_dialog_master_security_code_error_message">Not the same code please re-enter.</string>
    <string name="main_dialog_master_security_code_positive_button">OK, It is now safe. To delete from device.</string>
    <string name="main_dialog_master_security_code_negative_button">Not yet. Keep it there for a while.</string>

    <!-- main xml => settings modal -->
    <string name="main_toolbox_settings_title_label">Settings</string>
    <string name="main_toolbox_settings_close_button">Close</string>
    <string name="main_toolbox_settings_pin_forgot_pin_label">I forgot my PIN</string>
...
    <string name="transaction_error_message">Error getting the transaction.</string>
    <string name="transaction_detail_error_message">Error getting the transaction details.</string>

    <string name="register_username_not_available_error_message">This username is already taken. Please, use another one.</string>
    <string name="send_web_wallet_error_message">Something went wrong. Please check your address.</string>
    <string name="transaction_item_confirmation_label">Confirmations:</string>
    <string name="main_dialog_create_new_ping_title">Create a PIN</string>
    <string name="main_dialog_create_new_ping_message">In order to create a new PIN, we will need to log you out, OK?</string>
    <string name="fragment_business_list_of_places_item_confirmation_label" translatable="false" />

</resources>

